--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="logo">
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
@@ -27,8 +27,8 @@
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="task-edit">Edit</button>
+          <button class="task-delete">
             <img src="./remove.svg">
           </button>
         </li>
@@ -36,8 +36,8 @@
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="go shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+          <button class="task-edit">Save</button>
+          <button class="task-delete">
             <img src="./remove.svg">
           </button>
         </li>
@@ -48,8 +48,8 @@
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="task-edit">Edit</button>
+          <button class="task-delete">
             <img src="./remove.svg">
           </button>
         </li>
