--- a/index.html
+++ b/index.html
@@ -8,49 +8,49 @@
     >
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <div class="logo">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="page">
+    <div class="eisenhower-matrix">
+      <img class="eisenhower-matrix__img" src="./eisenhower-matrix.jpg">
+      <a class="eisenhower-matrix__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="todo-list">
-      <p id="adding-element">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+    <div class="todo-app">
+      <p id="adding-element" class="add-item">
+        <label for="new-task" class="add-item__label">Add Item</label>
+        <div class="new-item">
+          <input id="new-task" class="new-item__name" type="text">
+          <button class="new-item__add-button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="task-edit">Edit</button>
-          <button class="task-delete">
-            <img src="./remove.svg">
+      <h3 class="todo-app__list-name">Todo</h3>
+      <ul id="incomplete-tasks" class="task-list">
+        <li class="list-item">
+          <input class="list-item__checkbox" type="checkbox">
+          <label class="list-item__title">Pay Bills</label>
+          <input class="list-item__task" type="text" >
+          <button class="list-item__edit-button">Edit</button>
+          <button class="list-item__delete-button">
+            <img class="list-item__delete-svg" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="go shopping" class="task">
-          <button class="task-edit">Save</button>
-          <button class="task-delete">
-            <img src="./remove.svg">
+        <li class="list-item list-item_edit-mode">
+          <input class="list-item__checkbox" type="checkbox">
+          <label class="list-item__title">Go Shopping</label>
+          <input class="list-item__task" type="text" value="go shopping">
+          <button class="list-item__edit-button">Save</button>
+          <button class="list-item__delete-button">
+            <img class="list-item__delete-svg" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="task-edit">Edit</button>
-          <button class="task-delete">
-            <img src="./remove.svg">
+      <h3 class="todo-app__list-name">Completed</h3>
+      <ul id="completed-tasks" class="task-list">
+        <li class="list-item">
+          <input class="list-item__checkbox" type="checkbox" checked>
+          <label class="list-item__title">See the Doctor</label>
+          <input class="list-item__task" type="text">
+          <button class="list-item__edit-button">Edit</button>
+          <button class="list-item__delete-button">
+            <img class="list-item__delete-svg" src="./remove.svg">
           </button>
         </li>
       </ul>
