--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="page">
     <div class="eisenhower-matrix">
-      <img class="eisenhower-matrix__img" src="./eisenhower-matrix.jpg">
+      <img class="eisenhower-matrix__img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
       <a class="eisenhower-matrix__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="todo-app">
@@ -29,7 +29,7 @@
           <input class="list-item__task" type="text" >
           <button class="list-item__edit-button">Edit</button>
           <button class="list-item__delete-button">
-            <img class="list-item__delete-svg" src="./remove.svg">
+            <img class="list-item__delete-svg" src="./remove.svg" alt="">
           </button>
         </li>
         <li class="list-item list-item_edit-mode">
@@ -38,7 +38,7 @@
           <input class="list-item__task" type="text" value="go shopping">
           <button class="list-item__edit-button">Save</button>
           <button class="list-item__delete-button">
-            <img class="list-item__delete-svg" src="./remove.svg">
+            <img class="list-item__delete-svg" src="./remove.svg" alt="">
           </button>
         </li>
       </ul>
@@ -50,7 +50,7 @@
           <input class="list-item__task" type="text">
           <button class="list-item__edit-button">Edit</button>
           <button class="list-item__delete-button">
-            <img class="list-item__delete-svg" src="./remove.svg">
+            <img class="list-item__delete-svg" src="./remove.svg" alt="">
           </button>
         </li>
       </ul>
